--- a/character.html
+++ b/character.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plants | Daniel Teer Portfolio</title>
+    <title>Character</title>
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
@@ -21,20 +21,14 @@
                 <li><a href="aboutMe.html">About me</a></li>
             </ul>
         </nav>
-        <h1 class="page-title">Plants</h1>
+        <h1 class="page-title">Character Creation</h1>
     </header>
 
     <main>
         <section class="gallery">
-            <img src="./Images/tree1.png" alt="Plant Model 1">
-            <img src="./Images/tree2.png" alt="Plant Model 2">
-            <img src="./Images/tree3.png" alt="Plant Model 3">
-            <img src="./Images/tree4.png" alt="Plant Model 4">
-            <img src="./Images/fulltree.png" alt="Plant Model 4">
-            <img src="./Images/branch.png" alt="Plant Model 4">
-            <img src="./Images/tulip.png" alt="Plant Model 4">
-            <img src="./Images/tulipface.png" alt="Plant Model 4">
-            <img src="./Images/rose.png" alt="Plant Model 4">
+            <img src="./Images/head.png" alt="Prop Model 1">
+            <img src="./Images/man1.png" alt="Prop Model 2">
+            <img src="./Images/man2.png" alt="Prop Model 3">
         </section>
     </main>
     <footer>
