--- a/portfolio_teer.html
+++ b/portfolio_teer.html
@@ -13,28 +13,37 @@
         <nav>
             <div class="logo">
                 <!-- Later replace text with an icon or image -->
-                <h1>Daniel Teer</h1>
+                <h1><a href="portfolio_teer.html">Portfolio</a></h1>
             </div>
             <ul class="navLinks">
                 <li><a href="character.html">Character</a></li>
-                <li><a href="weapons.html">Weapons</a></li>
                 <li><a href="plants.html">Plants</a></li>
                 <li><a href="props.html">Props</a></li>
+                <li><a href="aboutMe.html">About me</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Main content -->
     <main>
+        
+        <section class="intro">
+            <h2>Daniel Teer</h2>
+                <p>I’m a game art and animation student developing my skills in 3D
+                 modeling and environment creation. Currently I've worked with 
+                 industry tools such as <b>Maya, 3DSmax, Fusion, Unreal Engine 5, 
+                 Unity, Construct, and Zbrush</b> and learned the basic workflow. 
+                 Each project has challenged me to explore new techniques and 
+                 create something new. I’m driven by curiosity and a desire to 
+                 keep getting better.
+                </p>
+        </section>
         <section id="categories">
             <div class="category-container">
                 <a href="character.html" class="category">
                     <img src="./Images/man.png" alt="Character Art">
                     <h2>Character</h2>
                 </a>
-                <a href="weapons.html" class="category">
-                    <img src="./Images/sword.png" alt="Weapons Art">
-                    <h2>Weapons</h2>
                 </a>
                 <a href="plants.html" class="category">
                     <img src="./Images/plants.png" alt="Plants Art">
@@ -50,7 +59,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 Daniel Teer | Game Animator & 3D Artist</p>
+        <p> 2025 Daniel Teer Game Animator & 3D Artist</p>
     </footer>
 
 </body>
