--- a/props.html
+++ b/props.html
@@ -8,8 +8,20 @@
 </head>
 <body>
 
-    <header>
-        <h1 class="page-title">props</h1>
+    <header id="navbar">
+        <nav>
+            <div class="logo">
+                <!-- Later replace text with an icon or image -->
+               <h1><a href="portfolio_teer.html">Portfolio</a></h1>
+            </div>
+            <ul class="navLinks">
+                <li><a href="character.html">Character</a></li>
+                <li><a href="plants.html">Plants</a></li>
+                <li><a href="props.html">Props</a></li>
+                <li><a href="aboutMe.html">About me</a></li>
+            </ul>
+        </nav>
+        <h1 class="page-title">Props</h1>
     </header>
 
     <main>
@@ -25,6 +37,9 @@
             <img src="./Images/ring2.png" alt="Prop Model 4">
         </section>
     </main>
+    <footer>
+        <p> 2025 Daniel Teer Game Animator & 3D Artist</p>
+    </footer>
 
 </body>
 </html>
