--- a/plants.html
+++ b/plants.html
@@ -31,15 +31,15 @@
             </p>
         </section>
         <section class="gallery">
-            <img src="./Images/tree1.png" alt="Plant Model 1">
-            <img src="./Images/tree2.png" alt="Plant Model 2">
-            <img src="./Images/tree3.png" alt="Plant Model 3">
-            <img src="./Images/tree4.png" alt="Plant Model 4">
-            <img src="./Images/fulltree.png" alt="Plant Model 4">
-            <img src="./Images/branch.png" alt="Plant Model 4">
-            <img src="./Images/tulip.png" alt="Plant Model 4">
-            <img src="./Images/tulipface.png" alt="Plant Model 4">
-            <img src="./Images/rose.png" alt="Plant Model 4">
+            <img src="./images/tree1.png" alt="Plant Model 1">
+            <img src="./images/tree2.png" alt="Plant Model 2">
+            <img src="./images/tree3.png" alt="Plant Model 3">
+            <img src="./images/tree4.png" alt="Plant Model 4">
+            <img src="./images/fulltree.png" alt="Plant Model 4">
+            <img src="./images/branch.png" alt="Plant Model 4">
+            <img src="./images/tulip.png" alt="Plant Model 4">
+            <img src="./images/tulipface.png" alt="Plant Model 4">
+            <img src="./images/rose.png" alt="Plant Model 4">
         </section>
     </main>
     <footer>
