--- a/portfolio_teer.html
+++ b/portfolio_teer.html
@@ -41,16 +41,16 @@
         <section id="categories">
             <div class="category-container">
                 <a href="character.html" class="category">
-                    <img src="./Images/man.png" alt="Character Art">
+                    <img src="./images/man.png" alt="Character Art">
                     <h2>Character</h2>
                 </a>
                 </a>
                 <a href="plants.html" class="category">
-                    <img src="./Images/plants.png" alt="Plants Art">
+                    <img src="./images/plants.png" alt="Plants Art">
                     <h2>Plants</h2>
                 </a>
                 <a href="props.html" class="category">
-                    <img src="./Images/props.png" alt="Props Art">
+                    <img src="./images/props.png" alt="Props Art">
                     <h2>Props</h2>
                 </a>
             </div>
