--- a/props.html
+++ b/props.html
@@ -32,15 +32,15 @@
             </p>
         </section>
         <section class="gallery">
-            <img src="./Images/guildseal1.png" alt="Prop Model 1">
-            <img src="./Images/guildseal2.png" alt="Prop Model 2">
-            <img src="./Images/chair1.png" alt="Prop Model 3">
-            <img src="./Images/chair2.png" alt="Prop Model 4">
-            <img src="./Images/coin1.png" alt="Prop Model 4">
-            <img src="./Images/crown1.png" alt="Prop Model 4">
-            <img src="./Images/cup1.png" alt="Prop Model 4">
-            <img src="./Images/ring1.png" alt="Prop Model 4">
-            <img src="./Images/ring2.png" alt="Prop Model 4">
+            <img src="./images/guildseal1.png" alt="Prop Model 1">
+            <img src="./images/guildseal2.png" alt="Prop Model 2">
+            <img src="./images/chair1.png" alt="Prop Model 3">
+            <img src="./images/chair2.png" alt="Prop Model 4">
+            <img src="./images/coin1.png" alt="Prop Model 4">
+            <img src="./images/crown1.png" alt="Prop Model 4">
+            <img src="./images/cup1.png" alt="Prop Model 4">
+            <img src="./images/ring1.png" alt="Prop Model 4">
+            <img src="./images/ring2.png" alt="Prop Model 4">
         </section>
     </main>
     <footer>
