--- a/character.html
+++ b/character.html
@@ -29,9 +29,9 @@
             <p>The project focused on low poly count and later introduced edgeflow.</p>
         </section>
         <section class="gallery">
-            <img src="./Images/head.png" alt="Prop Model 1">
-            <img src="./Images/man1.png" alt="Prop Model 2">
-            <img src="./Images/man2.png" alt="Prop Model 3">
+            <img src="./images/head.png" alt="Prop Model 1">
+            <img src="./images/man1.png" alt="Prop Model 2">
+            <img src="./images/man2.png" alt="Prop Model 3">
         </section>
     </main>
     <footer>
